Senior Software Engineer - DTCC Careers. K4Connect Software Engineer - Cloud (AWS, Node.js) | SmartRecruiters. K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters. K4Connect Software Engineer - Enterprise IoT Management System | SmartRecruiters. Senior Software Engineer / agiler Software Architekt (m/w/d).     Senior Software Engineer - Frontend at Bizongo . Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity). Lightmatter - Software Engineer - Machine Learning. SkySlope - Jobs: Software Engineer - Apply online. SkySlope - Jobs: Front End Software Engineer - Apply online. SkySlope - Jobs: Senior Software Engineer - Apply online. ROAR for Good - Jobs: Senior Software Engineer - Apply online. Flywire Senior Software Engineer | SmartRecruiters. New Relic Careers - Lead Software Engineer, Java. New Relic Careers - Lead Software Engineer - Java.     Software Developer at Sunrise Futures, LLC . Apttus Careers - Senior Software Engineer, SFDC. Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page. ServiceNow Careers - Senior Front End Software Engineer. Community Brands Careers - Software Developer. Community Brands Careers - Full Stack Software Developer. Job Application for Software Engineer - New Grad - Product at TrialSpark. Job Application for Software Engineer - Product at TrialSpark. Etsy - Senior Software Engineer, Web Platform. Etsy - Software Engineer, Core Platform. Software Engineer, Data Platform Team - FullContact - Career Page. Software Engineer-Java, J2EE, AWS, DRM, HTML5, CSS3-21775 #0236 job at Radiant Digital in Irving, TX, powered by JobScore. Sr Software Engineer- Linux, Unix, Windows,C++, Java-21262 #0234 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Garmin Cluj - Jobs: C Software Engineer - Apply online. Job Application for Senior Software Engineer, Desktop-Core Experience Squad at Abstract. Gigamon Careers - Senior Staff Software Engineer - Sensors. ServiceNow Careers - Staff

--- a/software.html
+++ b/software.html
@@ -65,15 +65,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
+<h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
+<h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light">Portland,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/506af146-5384-4dc1-a35c-0de5f913a61b'>Etsy - Senior Software Engineer, Web Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/506af146-5384-4dc1-a35c-0de5f913a61b'>Etsy - Senior Software Engineer, Web Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -258,7 +258,7 @@ Street). AI & Machine Learning ? AI Cognition. Permanent, Full time?...</p>
 <p>Jul 13, 2019 ... Software Engineer (Health Management Tribe). UK - London (Liverpool Street). 
 AI & Machine Learning ? AI Cognition. Permanent, Full time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/7b86e920-960a-45b7-9993-04e01a91925c'>Lightmatter - Software Engineer - Systems and Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/lightmatter/7b86e920-960a-45b7-9993-04e01a91925c'>Lightmatter - Software Engineer - Systems and Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Work with the compiler and machine learning teams to enable low-latency, high-
 throughput deep learning computation. Design a runtime environment that?...</p>
@@ -267,7 +267,7 @@ throughput deep learning computation. Design a runtime environment that?...</p>
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://flosports.applytojob.com/apply/q2rMxwxP5r/Sr-Software-Engineer-PlatformAPI?source=TWIT'>Sr. Software Engineer - Platform/API - FloSports - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flosports.applytojob.com/apply/q2rMxwxP5r/Sr-Software-Engineer-PlatformAPI?source=TWIT'>Sr. Software Engineer - Platform/API - FloSports - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -297,7 +297,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cyngn/632891ee-96ae-4d5a-babf-422884353356'>Cyngn - Senior Software Engineer - C++</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cyngn/632891ee-96ae-4d5a-babf-422884353356'>Cyngn - Senior Software Engineer - C++</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -333,7 +333,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1789003'>Job Application for Engineering: Senior Software Engineer - Packet Handling at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1789003'>Job Application for Engineering: Senior Software Engineer - Packet Handling at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -369,7 +369,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perimeterx/b3959a1c-3679-4437-be0e-e411b343643e'>PerimeterX - Junior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/perimeterx/b3959a1c-3679-4437-be0e-e411b343643e'>PerimeterX - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -384,7 +384,7 @@ team working closely with the data scientists and software developers. You'll?..
 Motivated developer with proactive approach; Excellent interpersonal skills, team
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/j2cloudservices/job/o4Jvafwc'>j2 Cloud Services Careers - Software Engineer - Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2cloudservices/job/o4Jvafwc'>j2 Cloud Services Careers - Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Senior Software Developer (Java) ? Senior Software Engineer ? Software 
 Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
@@ -413,7 +413,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kraken/9779388e-f3f7-493d-a469-6d5dd43c8108'>Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kraken/9779388e-f3f7-493d-a469-6d5dd43c8108'>Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
