--- a/deep-learning.html
+++ b/deep-learning.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Experienced in Machine learning algorithms and implementations. Computer 
 Vision / Computational geometry. GIT version control (good knowledge). English
@@ -105,11 +105,11 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865496-senior-c-software-engineer-deep-learning-optimization-engine-'>Run:AI Senior C++ Software Engineer (Deep Learning optimization engine) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865496-senior-c-software-engineer-deep-learning-optimization-engine-'>Run:AI Senior C++ Software Engineer (Deep Learning optimization engine) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -125,7 +125,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://indigoinfra.recruitee.com/o/senior-backend-development-position-python-deeplearning-healthcare-startup-amsterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indigoinfra.recruitee.com/o/senior-backend-development-position-python-deeplearning-healthcare-startup-amsterdam'>
       Senior Backend Development position (Python) | Deep-learning Healthcare start-up | Amsterdam - Indigo
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
@@ -165,7 +165,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -257,7 +257,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-06-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
@@ -275,7 +275,7 @@ daytime?...</p>
 learning, machine learning, natural language processing, computer vision, voice,
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lyft/jobs/4294694002?gh_jid=4294694002'>Job Application for PhD Research Intern, Deep Learning (Fall 2019 ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lyft/jobs/4294694002?gh_jid=4294694002'>Job Application for PhD Research Intern, Deep Learning (Fall 2019 ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>May 27, 2019 ... For this position, we are looking for a PhD Research intern with the passion for 
 applied deep learning within autonomous vehicles and a strong level of expertise
@@ -327,7 +327,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4278388002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4278388002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -375,15 +375,15 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/baylabs/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Bay Labs - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/baylabs/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Bay Labs - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Research Engineer-Deep Learning Theory and Algorithms</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Research Engineer-Deep Learning Theory and Algorithms</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -391,7 +391,7 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
