--- a/project-manager.html
+++ b/project-manager.html
@@ -122,11 +122,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/o6VBafww'>LinkedIn Careers - Insights Program Manager, LinkedIn Marketing Solutions</a></h5> 
+<h5><a href='https://jobs.jobvite.com/linkedin/job/o6VBafww'>LinkedIn Careers - Insights Program Manager, LinkedIn Marketing Solutions</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -158,6 +158,55 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
+<h5><a href='https://workable.com/j/5B73FE7F11'>HIROTEC AMERICA - Jobs: Stamping Die Project Manager - Apply ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Stamping Die Project Manager at HIROTEC AMERICA.</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/02264EBA69'>Albireo Energy, LLC - Jobs: Project Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Apply online for the job of Project Manager at Albireo Energy, LLC.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/1A077E55D9'>bChannels - Jobs: Marketing Project Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Marketing Project Manager at bChannels.</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/4BFD11CE04'>Bluestar Genomics - Jobs: Senior Project Manager - Cancer Biology ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Senior Project Manager - Cancer Biology/Genomics at 
+Bluestar Genomics.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/6FD67630F8'>Tower Water - Jobs: Project Manager for a Water Treatment ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Project Manager for a Water Treatment Company at 
+Tower Water.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/98BDB624A1'>OneinaMil - Jobs: Medicaid Eligibility Project Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Medicaid Eligibility Project Manager at OneinaMil.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/AD728F73CF'>TFS - Jobs: Clinical Project Manager Dermatology - Homebased ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Clinical Project Manager Dermatology - Homebased at 
+TFS.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/F9DACC7322'>GovNet Communications - Jobs: Project Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Project Manager at GovNet Communications.</p>
+<hr/>
+<h5><a href='https://wirecardbrasil.workable.com/jobs/1073080'>Project Manager (m/f/x) - Customer ... - Wirecard Brasil - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Project Manager (m/f/x) - Customer Management at 
+Wirecard Brasil.</p>
+<hr/>
+<h5><a href='https://right-at-school.workable.com/j/4DD41F152E'>Right At School - Jobs: Part Time Program Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Part Time Program Manager at Right At School.</p>
+<hr/>
+<h5><a href='https://kapten.workable.com/j/08E9263BDF?viewed=true'>International Operations Project Manager (M/F) - CDI ... - Kapten - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Apply online for the job of International Operations Project Manager (M/F) - CDI 
+Paris (relocation accepted) at Kapten.</p>
+<hr/>
 <h5><a href='https://kapten.workable.com/j/08E9263BDF'>Kapten - Jobs: International Operations Project Manager (M/F) - CDI Paris (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -183,7 +232,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oZnmafwC&__jvst=ER+-+Employee+Referral&__jvsd=swDiuhwH&__jvsc=Twitter&bid=nFyDTKwY'>Nutanix Careers - Sr. Program Manager - Sales Enablement WEURSSA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oZnmafwC&__jvst=ER+-+Employee+Referral&__jvsd=swDiuhwH&__jvsc=Twitter&bid=nFyDTKwY'>Nutanix Careers - Sr. Program Manager - Sales Enablement WEURSSA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -191,7 +240,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">Vancouver, BCCanada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/viv/jobs/1793643'>Job Application for Technical Program Manager - Contract at Viv</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/viv/jobs/1793643'>Job Application for Technical Program Manager - Contract at Viv</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -219,7 +268,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692151871-project-manager'>Evolution Gaming Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692151871-project-manager'>Evolution Gaming Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -233,13 +282,13 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl7/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl7/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl8/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl8/'>
     Construction Project Manager  at OYO
 </a></h5> 
 <p><span class="badge badge-light">Newcastle upon Tyne, England</span></p>
@@ -257,7 +306,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flp/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flp/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -269,7 +318,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flr/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flr/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -287,7 +336,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flv/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flv/'>
     Construction Project Manager - Scotland at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -383,7 +432,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/Rsn3Gz/Digital-Project-Manager'>Digital Project Manager - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/Rsn3Gz/Digital-Project-Manager'>Digital Project Manager - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -392,7 +441,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p>6 days ago ... We have an opportunity for a project analyst to join our team as we establish a 
 new program management office to support the NIH. On our team, you'll monitor?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk03fos/'>
+<h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk03fos/'>
     Partner Project Manager  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -414,7 +463,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/welocalize/89281f7c-fec6-4cc4-bf30-6ad7c19ee616'>Welocalize - Localization Project Manager - Life Sciences - PDX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/welocalize/89281f7c-fec6-4cc4-bf30-6ad7c19ee616'>Welocalize - Localization Project Manager - Life Sciences - PDX</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -437,65 +486,6 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dvele/e6e8ef4e-9962-4b31-9ffb-4d6f71b73bb3'>Dvele - Site Project Manager/ Estimator</a></h5> 
-<p><span class="badge badge-light">Santa Rosa</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/technical-project-manager-seattle'>
-      Technical Project Manager (Seattle) - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Seattle Seattle Seattle Seattle Seattle</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/french-linguistics-project-manager'>
-      French Linguistics Project Manager - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/technical-project-manager-portugal'>
-      Technical Project Manager (Portugal) - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/italian-linguistics-project-manager'>
-      Italian Linguistics Project Manager - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/dutchgerman-linguistics-project-manager'>
-      Dutch/German Linguistics Project Manager - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/portuguesejapanese-linguistics-project-manager'>
-      Portuguese/Japanese Linguistics Project Manager - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/life-services-pilots-program-manager-facilities-management-57100'>Life Services & Pilots Program Manager, Facilities Management ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 14, 2019 ... JOB SUMMARY The purpose of this position is to provide Program Management 
-from low to medium cross-functional projects and programs. Characteristics.....</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/ddb/job/ouqCafwq'>DDB Careers - Digital Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nRyvSKw1&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-24</p>
-<hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_onegas/external/en-us/gateway/viewFromLink.html?jobPostId=2773&localeCode=en-us'>Project Manager, Human Resources - Tulsa OK 74133</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Position Description: We are hiring for a Project Manager Human Resources 
-position at our corporate headquarters in downtown Tulsa, OK. In this position the
-?...</p>
 <hr/>
 
 
